[gd_scene load_steps=17 format=3 uid="uid://dhd1y4fwaf7ww"]

[ext_resource type="Script" path="res://create_user.gd" id="1_8nogr"]
[ext_resource type="Texture2D" uid="uid://d1df8auhkx17" path="res://images/border2.png" id="3_kynf2"]
[ext_resource type="Texture2D" uid="uid://b6qyi4tiqwggm" path="res://images/avawom1.png" id="3_mw70b"]
[ext_resource type="Texture2D" uid="uid://1w7wpada15ic" path="res://images/border-elements-stone.png" id="7_6mt3n"]
[ext_resource type="Texture2D" uid="uid://dmu4cmo4owy3y" path="res://images/border1.png" id="7_56vsd"]
[ext_resource type="Texture2D" uid="uid://df22ciddldqmo" path="res://images/text-border-black.png" id="8_0s3e3"]
[ext_resource type="Texture2D" uid="uid://2d4ygsviiauv" path="res://images/border1-press.png" id="8_andi1"]
[ext_resource type="Texture2D" uid="uid://pvcsfo4svja3" path="res://images/arrow-left.png" id="9_58yvc"]
[ext_resource type="Script" path="res://avatar.gd" id="9_yyh4u"]
[ext_resource type="Texture2D" uid="uid://vv00pwlq68yx" path="res://images/border-avatar.png" id="10_4s6uh"]
[ext_resource type="Texture2D" uid="uid://bbkogg7y4ljtk" path="res://images/arrow-right.png" id="10_30jdq"]
[ext_resource type="Texture2D" uid="uid://1p7v0fn83c0a" path="res://images/arrow-left-pressed.png" id="11_c3kiu"]
[ext_resource type="Texture2D" uid="uid://djrpur7uw2dd4" path="res://images/arrow-right-pressed.png" id="12_reg66"]

[sub_resource type="Animation" id="Animation_ss1bv"]
resource_name = "blackinScene"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackoutScene:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.117647, 0.0666667, 0.235294, 1), Color(0.12549, 0.117647, 0.266667, 0)]
}

[sub_resource type="Animation" id="Animation_3wjgc"]
resource_name = "blackoutScene"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackoutScene:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.12549, 0.117647, 0.266667, 0), Color(0.117647, 0.0666667, 0.235294, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4vfs0"]
_data = {
"blackinScene": SubResource("Animation_ss1bv"),
"blackoutScene": SubResource("Animation_3wjgc")
}

[node name="create_user_node" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8nogr")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("../ButtonOk")
focus_previous = NodePath("../ButtonOk")
color = Color(0.117647, 0.0666667, 0.235294, 1)
metadata/_edit_use_anchors_ = true

[node name="BorderInput" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = 332.0
offset_right = 1547.0
offset_bottom = 773.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
tooltip_text = "
"
texture = ExtResource("3_kynf2")
stretch_mode = 5

[node name="InputName" type="LineEdit" parent="BorderInput"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -728.5
offset_top = -167.5
offset_right = 738.5
offset_bottom = 152.5
grow_horizontal = 2
grow_vertical = 2
focus_next = NodePath("../../ButtonOk")
focus_previous = NodePath("../../ButtonOk")
focus_mode = 1
theme_override_font_sizes/font_size = 100
placeholder_text = "ИМЯ"
alignment = 1
max_length = 18
flat = true
caret_blink = true
caret_blink_interval = 0.5

[node name="ControlAvatar" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AvatarSprite" type="TextureRect" parent="ControlAvatar"]
layout_mode = 1
offset_left = 185.0
offset_top = 161.0
offset_right = 339.0
offset_bottom = 311.0
scale = Vector2(1.8, 1.8)
texture = ExtResource("3_mw70b")
stretch_mode = 5
script = ExtResource("9_yyh4u")

[node name="BorderAvatar" type="TextureRect" parent="ControlAvatar/AvatarSprite"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.4439
offset_top = -87.7783
offset_right = 1289.56
offset_bottom = 1272.22
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.13, 0.13)
texture = ExtResource("10_4s6uh")
stretch_mode = 5

[node name="ButtonChangeAvatar" type="TextureButton" parent="ControlAvatar/AvatarSprite/BorderAvatar"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -600.0
offset_top = 74.7861
offset_right = 600.0
offset_bottom = 324.786
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
texture_normal = ExtResource("7_56vsd")
texture_pressed = ExtResource("8_andi1")
stretch_mode = 5
metadata/_edit_group_ = true

[node name="LabelButtonBack" type="Label" parent="ControlAvatar/AvatarSprite/BorderAvatar/ButtonChangeAvatar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -387.5
offset_top = -123.0
offset_right = 387.5
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "сменить"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="ControlAvatar/AvatarSprite"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonOk" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -541.0
offset_top = -164.0
offset_right = 841.0
offset_bottom = 101.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.33, 0.33)
focus_mode = 1
texture_normal = ExtResource("7_56vsd")
texture_pressed = ExtResource("8_andi1")
stretch_mode = 5

[node name="LabelButtonOk" type="Label" parent="ButtonOk"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.0
offset_top = -82.5
offset_right = 101.0
offset_bottom = 82.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.466667)
theme_override_font_sizes/font_size = 120
text = " ОК"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonBack" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 88.0
offset_top = -164.0
offset_right = 1470.0
offset_bottom = 101.0
grow_vertical = 0
scale = Vector2(0.33, 0.33)
focus_mode = 0
texture_normal = ExtResource("7_56vsd")
texture_pressed = ExtResource("8_andi1")
stretch_mode = 5

[node name="LabelButtonBack" type="Label" parent="ButtonBack"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.5
offset_top = -22.5
offset_right = 51.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 120
text = "НАЗАД"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ElementsTable" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -840.0
offset_top = 72.0
offset_right = 583.0
offset_bottom = 1330.0
grow_horizontal = 0
scale = Vector2(0.549157, 0.51248)
texture = ExtResource("7_6mt3n")
stretch_mode = 5
metadata/_edit_group_ = true

[node name="BorderText" type="TextureRect" parent="ElementsTable"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -214.983
offset_top = -40.9772
offset_right = 652.017
offset_bottom = 234.023
grow_horizontal = 2
scale = Vector2(0.5, 0.516)
texture = ExtResource("8_0s3e3")
stretch_mode = 5

[node name="BorderText" type="Label" parent="ElementsTable/BorderText"]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -327.0
offset_top = -55.0
offset_right = 327.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 76
text = "контроль стихий"

[node name="Table" type="VBoxContainer" parent="ElementsTable"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.5
offset_top = -452.0
offset_right = 500.5
offset_bottom = 452.0
grow_horizontal = 2
grow_vertical = 2

[node name="row1" type="HBoxContainer" parent="ElementsTable/Table"]
layout_mode = 2
size_flags_vertical = 3
metadata/_edit_group_ = true

[node name="ElementName" type="Label" parent="ElementsTable/Table/row1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 70
text = "воздух"
horizontal_alignment = 1

[node name="ArrowLeftAir" type="TextureButton" parent="ElementsTable/Table/row1"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("9_58yvc")
texture_pressed = ExtResource("11_c3kiu")

[node name="CountAir" type="Label" parent="ElementsTable/Table/row1"]
custom_minimum_size = Vector2(120, 2.08165e-12)
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "0
"
horizontal_alignment = 1

[node name="ArrowRightAir" type="TextureButton" parent="ElementsTable/Table/row1"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("12_reg66")
texture_pressed = ExtResource("10_30jdq")

[node name="row2" type="HBoxContainer" parent="ElementsTable/Table"]
layout_mode = 2
size_flags_vertical = 3
metadata/_edit_group_ = true

[node name="ElementName" type="Label" parent="ElementsTable/Table/row2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 70
text = "вода"
horizontal_alignment = 1

[node name="ArrowLeftWater" type="TextureButton" parent="ElementsTable/Table/row2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("9_58yvc")
texture_pressed = ExtResource("11_c3kiu")

[node name="CountWater" type="Label" parent="ElementsTable/Table/row2"]
custom_minimum_size = Vector2(120, 2.08165e-12)
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "0
"
horizontal_alignment = 1

[node name="ArrowRightWater" type="TextureButton" parent="ElementsTable/Table/row2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("12_reg66")
texture_pressed = ExtResource("10_30jdq")

[node name="row3" type="HBoxContainer" parent="ElementsTable/Table"]
layout_mode = 2
size_flags_vertical = 3
metadata/_edit_group_ = true

[node name="ElementName" type="Label" parent="ElementsTable/Table/row3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 70
text = "земля
"
horizontal_alignment = 1

[node name="ArrowLeftEarth" type="TextureButton" parent="ElementsTable/Table/row3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("9_58yvc")
texture_pressed = ExtResource("11_c3kiu")

[node name="CountEarth" type="Label" parent="ElementsTable/Table/row3"]
custom_minimum_size = Vector2(120, 2.08165e-12)
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "0
"
horizontal_alignment = 1

[node name="ArrowRightEarth" type="TextureButton" parent="ElementsTable/Table/row3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("12_reg66")
texture_pressed = ExtResource("10_30jdq")

[node name="row4" type="HBoxContainer" parent="ElementsTable/Table"]
layout_mode = 2
size_flags_vertical = 3
metadata/_edit_group_ = true

[node name="ElementName" type="Label" parent="ElementsTable/Table/row4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 70
text = "огонь
"
horizontal_alignment = 1

[node name="ArrowLeftFire" type="TextureButton" parent="ElementsTable/Table/row4"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("9_58yvc")
texture_pressed = ExtResource("11_c3kiu")

[node name="CountFire" type="Label" parent="ElementsTable/Table/row4"]
custom_minimum_size = Vector2(120, 2.08165e-12)
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "0
"
horizontal_alignment = 1

[node name="ArrowRightFire" type="TextureButton" parent="ElementsTable/Table/row4"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("12_reg66")
texture_pressed = ExtResource("10_30jdq")

[node name="BorderTableFooterText" type="TextureRect" parent="ElementsTable"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -214.983
offset_top = -95.4805
offset_right = 652.017
offset_bottom = 179.52
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.516)
texture = ExtResource("8_0s3e3")
stretch_mode = 5

[node name="ControlAvailableCountRow" type="HBoxContainer" parent="ElementsTable/BorderTableFooterText"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.5
offset_top = -52.5
offset_right = 229.5
offset_bottom = 52.5
grow_horizontal = 2
grow_vertical = 2

[node name="ControlCountText" type="Label" parent="ElementsTable/BorderTableFooterText/ControlAvailableCountRow"]
clip_contents = true
layout_mode = 2
theme_override_font_sizes/font_size = 76
text = "доступно:  "
horizontal_alignment = 1

[node name="ControlAvailableCount" type="Label" parent="ElementsTable/BorderTableFooterText/ControlAvailableCountRow"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
theme_override_font_sizes/font_size = 70
text = "0"
horizontal_alignment = 1

[node name="BlackoutScene" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.117647, 0.0666667, 0.235294, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4vfs0")
}

[connection signal="mouse_entered" from="Background" to="." method="_on_color_rect_focus_entered"]
[connection signal="focus_entered" from="BorderInput/InputName" to="." method="_on_input_name_focus_entered"]
[connection signal="focus_exited" from="BorderInput/InputName" to="." method="_on_input_name_focus_exited"]
[connection signal="text_change_rejected" from="BorderInput/InputName" to="." method="_on_input_name_text_change_rejected"]
[connection signal="text_changed" from="BorderInput/InputName" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="BorderInput/InputName" to="." method="_on_input_name_text_submitted"]
[connection signal="pressed" from="ControlAvatar/AvatarSprite/BorderAvatar/ButtonChangeAvatar" to="." method="_on_button_change_avatar_pressed"]
[connection signal="pressed" from="ControlAvatar/AvatarSprite/Button" to="." method="_on_button_change_avatar_pressed"]
[connection signal="pressed" from="ButtonOk" to="." method="_on_button_ok_pressed"]
[connection signal="pressed" from="ButtonBack" to="." method="_on_button_back_pressed"]
[connection signal="pressed" from="ElementsTable/Table/row1/ArrowLeftAir" to="." method="_on_arrow_left_air_pressed"]
[connection signal="pressed" from="ElementsTable/Table/row1/ArrowRightAir" to="." method="_on_arrow_right_air_pressed"]
[connection signal="pressed" from="ElementsTable/Table/row2/ArrowLeftWater" to="." method="_on_arrow_left_water_pressed"]
[connection signal="pressed" from="ElementsTable/Table/row2/ArrowRightWater" to="." method="_on_arrow_right_water_pressed"]
[connection signal="pressed" from="ElementsTable/Table/row3/ArrowLeftEarth" to="." method="_on_arrow_left_earth_pressed"]
[connection signal="pressed" from="ElementsTable/Table/row3/ArrowRightEarth" to="." method="_on_arrow_right_earth_pressed"]
[connection signal="pressed" from="ElementsTable/Table/row4/ArrowLeftFire" to="." method="_on_arrow_left_fire_pressed"]
[connection signal="pressed" from="ElementsTable/Table/row4/ArrowRightFire" to="." method="_on_arrow_right_fire_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
